# mtbank_hackathon

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: .env.template  CLAUDE.md  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_22_1248-136c558c6e81_add_user.py  2026_04_22_1400-a1b2c3d4e5f6_add_bonus_and_game_attempts.py  2026_04_23_0159-c47db805d03c_add_battlepass_activations.py  2026_04_23_1321-f7469d98a2d3_add_shop_items_and_purchases.py  2026_04_23_1341-a3b4c5d6e7f8_seed_shop_items.py  2026_04_23_1424-b225929d4ae9_add_friendship.py  2026_04_24_0508-4a8d2005099e_change_user_bonus_default_to_67.py  2026_04_24_1500-c6d7e8f9a0b1_update_shop_items.py
backend/src/: main.py
backend/src/api/: __init__.py  exception_handlers.py  firewall.py
backend/src/api/auth/: controllers.py  schemas.py
backend/src/api/battlepass/: controllers.py  schemas.py
backend/src/api/friends/: __init__.py  controllers.py  schemas.py
backend/src/api/game/: controllers.py  schemas.py
backend/src/api/shop/: controllers.py  schemas.py
backend/src/core/: config.py  dto.py  exceptions.py  security.py  time.py
backend/src/core/schemas/: __init__.py  base.py
backend/src/dependencies/: __init__.py  auth.py  battlepass.py  config.py  db.py  friends.py  game.py  shop.py
backend/src/schemas/: friends.py  shop.py
backend/src/services/: auth.py  battlepass.py  battlepass_config.py  friends.py  game.py  shop.py
(+101 files in other folders)
